[gd_scene load_steps=18 format=3 uid="uid://b8b28ne1f1sjg"]

[ext_resource type="Script" path="res://src/player.gd" id="1_7ui7v"]
[ext_resource type="Texture2D" uid="uid://dndl8caujsc3h" path="res://assets/0.png" id="2_3ls46"]
[ext_resource type="Texture2D" uid="uid://givhbiephegw" path="res://assets/1.png" id="3_eh1ao"]
[ext_resource type="Shader" path="res://shaders/dissolve.gdshader" id="4_lhsex"]
[ext_resource type="Texture2D" uid="uid://dnssgit4cgkei" path="res://assets/plr.png" id="4_x01d3"]
[ext_resource type="Script" path="res://src/shake.gd" id="5_c8pl5"]
[ext_resource type="AudioStream" uid="uid://csvapyb0ja8hx" path="res://sounds/powerUp.wav" id="7_hmc4s"]
[ext_resource type="AudioStream" uid="uid://dw251cotit5bi" path="res://sounds/explosion.wav" id="8_1wss2"]

[sub_resource type="Curve" id="Curve_2fakg"]
_data = [Vector2(0, 1), 0.0, -0.221333, 0, 0, Vector2(1, 0), -3.84132, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_i6f3t"]
curve = SubResource("Curve_2fakg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_12kd5"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 27.95
gravity = Vector3(0, 0, 0)
initial_velocity_max = 158.42
angular_velocity_min = -720.0
angular_velocity_max = 720.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_max = 18.45
angle_max = 720.0
scale_min = 0.0
scale_max = 0.02
scale_curve = SubResource("CurveTexture_i6f3t")
turbulence_noise_strength = 0.0
turbulence_noise_scale = 10.0
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_unqs4"]
frequency = 0.085
offset = Vector3(0, 1.30435e+08, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hn45c"]
invert = true
noise = SubResource("FastNoiseLite_unqs4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sxqwp"]
shader = ExtResource("4_lhsex")
shader_parameter/dissolve_value = 1.0
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_hn45c")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dqm4"]

[sub_resource type="Animation" id="Animation_rpqeq"]
resource_name = "initalise"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Plr:material:shader_parameter/dissolve_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("7_hmc4s"), ExtResource("8_1wss2")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-15.928, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Plr:shaking")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Plr:amplitude")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.7, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [3, 3, 0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hf1k5"]
_data = {
"initalise": SubResource("Animation_rpqeq")
}

[node name="player" type="RigidBody2D"]
linear_damp = 1.488
angular_damp = 1.336
script = ExtResource("1_7ui7v")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-15, 1)
emitting = false
amount = 500
process_material = SubResource("ParticleProcessMaterial_12kd5")
texture = ExtResource("2_3ls46")
randomness = 1.0

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(-15, 1)
emitting = false
amount = 500
process_material = SubResource("ParticleProcessMaterial_12kd5")
texture = ExtResource("3_eh1ao")
randomness = 1.0

[node name="Plr" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_sxqwp")
position = Vector2(-0.0689649, 0.0201443)
scale = Vector2(0.163793, 0.163793)
texture = ExtResource("4_x01d3")
script = ExtResource("5_c8pl5")
amplitude = 3
smooth = true
frameblend = 2
lerp = 0.09

[node name="collision" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-17, 0.900002)
polygon = PackedVector2Array(0, -17, 40, -0.900002, 0, 16)

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2(99, 39)
scale = Vector2(2.24, 2.12)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(-64, -18)
shape = SubResource("RectangleShape2D_5dqm4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "initalise"
libraries = {
"": SubResource("AnimationLibrary_hf1k5")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_1wss2")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
